Fixed picture issues along with some misalignment in contact page

--- a/css/main.css
+++ b/css/main.css
@@ -276,7 +276,8 @@ main {
     .menu-branding .portrait {
       background: url(../img/portrait_small.jpg);
       width: 150px;
-      height: 150px; }
+      height: 150px;
+     }
   .about-info {
     grid-template-areas: 'bioimage'
  'bio'
@@ -286,12 +287,20 @@ main {
  'experience4';
     grid-template-columns: 1fr; }
   .projects {
-    grid-template-columns: repeat(2, 1fr); } }
+    grid-template-columns: repeat(2, 1fr); } 
+    .boxes div {
+      padding: 1.5rem 2.5rem;
+      font-size: 1.7rem; } 
+      .boxes div:hover {
+        padding: 1.5rem 2.5rem;} }
 
 @media screen and (max-width: 500px) {
   main#home h1 {
     margin-top: 10vh; }
   .projects {
     grid-template-columns: 1fr; }
-  .boxes div {
-    font-size: 1.7rem; } }
+    .boxes div {
+      padding: 0.5rem 1.5rem;
+      font-size: 1.7rem; } 
+      .boxes div:hover {
+        padding: 0.5rem 1.5rem;} }
